--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,7 +43,7 @@ under the License.
 		<xerces.version>2.12.2</xerces.version>
 		<httpclient.version>4.5.14</httpclient.version>
 		<snakeyaml.version>2.4</snakeyaml.version>
-		<commons.lang.version>2.6</commons.lang.version>
+		<commons.lang.version>3.19.0</commons.lang.version>
 		<wiremock.version>3.13.1</wiremock.version>
 		<rometools.version>2.1.0</rometools.version>
 		<cli.version>1.10.0</cli.version>
@@ -215,8 +215,8 @@ under the License.
 		</dependency>
 
 		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 			<version>${commons.lang.version}</version>
 		</dependency>
 
